--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,11 @@
---- #YAML:1.0
-name:                URI-Escape-XS
-version:             0.01
-abstract:            Drop-In replacement for URI::Escape
-license:             ~
-author:              
-    - Dan Kogai <dankogai@dan.co.jp>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         URI-Escape-XS
+version:      0.01
+version_from: lib/URI/Escape/XS.pm
+installdirs:  site
+requires:
     Test::More:                    0
-meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.30
